add compile flag to remove gimmicks

--- a/.github/workflows/build-ndk.yml
+++ b/.github/workflows/build-ndk.yml
@@ -64,7 +64,7 @@ jobs:
       run: |
         cd ${GITHUB_WORKSPACE}
         qpm qmod manifest
-        pwsh -Command ./build.ps1
+        pwsh -Command ./build.ps1 -no_gimmick
     - name: Create Qmod
       run: |
         pwsh -Command ./buildQMOD.ps1 ${{ env.qmod_name }}_${{ github.event.inputs.version }}
